<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainMenuActivity">

    <ImageView
        android:id="@+id/imageViewMainMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/backgroundText"
        android:scaleType="centerCrop"
        android:src="@drawable/wallpaper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/logoutText"
        android:onClick="logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewMainMenu"
        app:srcCompat="@drawable/logout" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/imageText"
        android:onClick="changeLanguage"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageViewMainMenu"
        app:srcCompat="@drawable/change_lang" />

    <Button
        android:id="@+id/buttonFire"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:onClick="fireHazard"
        android:text="@string/fireText"
        app:backgroundTint="@color/appMainColor"
        app:layout_constraintBottom_toTopOf="@+id/buttonAbort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewMainMenu"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/buttonAbort"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:onClick="abortTimer"
        android:text="@string/abortText"
        app:backgroundTint="@color/appMainColor"
        app:layout_constraintBottom_toTopOf="@+id/buttonContacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewMainMenu"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/buttonContacts"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:onClick="getContacts"
        android:text="@string/contactsText"
        app:backgroundTint="@color/appMainColor"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewMainMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewMainMenu"
        app:layout_constraintVertical_bias="0.55" />

    <Button
        android:id="@+id/buttonStatistics"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:onClick="showStatistics"
        android:text="@string/statisticsText"
        app:backgroundTint="@color/appMainColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonContacts"
        app:layout_constraintVertical_bias="0.05" />

    <ProgressBar
        android:id="@+id/progressBarMainMenu"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:translationZ="90dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textColor="#FFEB3B"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <TextView
        android:id="@+id/countdownLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countdownLabel"
        android:textColor="#FFEB3B"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewMainMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789" />

</androidx.constraintlayout.widget.ConstraintLayout>