<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/backgroundText"
        android:scaleType="centerCrop"
        android:src="@drawable/wallpaper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:translationZ="90dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:width="300dp"
        android:autofillHints="password"
        android:backgroundTint="@color/appMainColor"
        android:ems="10"
        android:hint="@string/passwordText"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        android:textColorLink="@color/appMainColor"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewLogin"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLogin"
        app:layout_constraintStart_toStartOf="@+id/imageViewLogin"
        app:layout_constraintTop_toTopOf="@+id/imageViewLogin" />

    <EditText
        android:id="@+id/editTextTextEmailAddressLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:autofillHints="password"
        android:backgroundTint="@color/appMainColor"
        android:ems="10"
        android:hint="@string/emailText"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        android:textColorLink="@color/appMainColor"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPasswordLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewLogin"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/buttonLoginLogin"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:onClick="login"
        android:text="@string/loginText"
        app:backgroundTint="@color/appMainColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordLogin"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/buttonRegisterLogin"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:onClick="goToRegister"
        android:text="@string/registerText"
        app:backgroundTint="#00FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginLogin"
        app:layout_constraintVertical_bias="0.05"
        app:strokeColor="@color/appMainColor"
        app:strokeWidth="3dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/imageText"
        android:onClick="changeLanguage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/change_lang" />

</androidx.constraintlayout.widget.ConstraintLayout>