<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <ImageView
        android:id="@+id/imageViewRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/wallpaper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/backgroundText" />

    <EditText
        android:id="@+id/editTextTextPersonFirstNameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:backgroundTint="@color/appMainColor"
        android:ems="10"
        android:hint="@string/firstNameText"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        android:textColorLink="@color/appMainColor"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonLastNameRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        android:autofillHints="first name" />

    <EditText
        android:id="@+id/editTextTextPersonLastNameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:backgroundTint="@color/appMainColor"
        android:ems="10"
        android:hint="@string/lastNameText"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        android:textColorLink="@color/appMainColor"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddressRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewRegister"
        app:layout_constraintVertical_bias="0.95"
        android:autofillHints="last name" />

    <EditText
        android:id="@+id/editTextTextEmailAddressRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:backgroundTint="@color/appMainColor"
        android:ems="10"
        android:hint="@string/emailText"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        android:textColorLink="@color/appMainColor"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewRegister"
        android:autofillHints="email" />

    <EditText
        android:id="@+id/editTextTextPasswordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:backgroundTint="@color/appMainColor"
        android:ems="10"
        android:hint="@string/passwordText"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        android:textColorLink="@color/appMainColor"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewRegister"
        app:layout_constraintEnd_toEndOf="@+id/imageViewRegister"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddressRegister"
        app:layout_constraintVertical_bias="0.05"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/editTextTextPassword2Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:backgroundTint="@color/appMainColor"
        android:ems="10"
        android:hint="@string/passwordRetypeText"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        android:textColorLink="@color/appMainColor"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordRegister"
        app:layout_constraintVertical_bias="0.05"
        android:autofillHints="password" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:onClick="register"
        android:text="@string/registerText"
        app:backgroundTint="@color/appMainColor"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2Register"
        app:layout_constraintVertical_bias="0.05" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:translationZ="90dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>