<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StatisticsActivity">

    <ImageView
        android:id="@+id/imageViewMainMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/backgroundText"
        android:scaleType="centerCrop"
        android:src="@drawable/wallpaper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBarStatistics"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:translationZ="90dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statsMainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_main_label"
        android:textColor="@color/appMainColor"
        android:textColorLink="#CDDC39"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewMainMenu"
        app:layout_constraintVertical_bias="0.102" />

    <Spinner
        android:id="@+id/spinnerEventType"
        android:layout_width="120dp"
        android:layout_height="39dp"
        android:background="#EDF1F7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventLabel"
        app:layout_constraintVertical_bias="0.01999998" />

    <Spinner
        android:id="@+id/spinnerDate"
        android:layout_width="120dp"
        android:layout_height="39dp"
        android:background="#EDF1F7"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewMainMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateLabel"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateLabel"
        android:textAlignment="center"
        android:textColor="@color/appMainColor"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewMainMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEventType"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/eventLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventLabel"
        android:textAlignment="center"
        android:textColor="@color/appMainColor"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statsMainLabel"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/showStatsButton"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:onClick="showStats"
        android:text="OK"
        android:textColorLink="@color/appMainColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDate"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/totalResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/appMainColor"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageViewMainMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showStatsButton"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/totalResultsNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/appMainColor"
        android:textSize="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalResults"
        app:layout_constraintVertical_bias="0.050000012" />

</androidx.constraintlayout.widget.ConstraintLayout>